# my-gpt2

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: 00_quickstart.md  01_overview.md  01_overview.py  01_quickstart.md  01_tokenizer.md  02_attention.md  02_overview.md  02_tokenizer.md  02_tokenizer.py  03_block.md  03_spiece.md  03_spiece.py  03_tokenizer.md  04_embedding.md  04_embedding.py  04_model_overall.md  04_spiece.md  05_embedding.md  05_embedding.py  05_layer_norm.md  05_layer_norm.py  05_spiece.md  06_attention.md  06_attention.py  06_layer_norm.md  07_attention.md  07_mlp.md  07_mlp.py  08_mlp.md  08_mlp.py  08_residual.md  08_residual.py  09_output.md  09_output.py  09_residual.md  09_residual.py  10_architecture.md  10_kv_cache.md  10_kv_cache.py  10_output.md  (+9 more)
experiments/: 01_embedding.md  01_embedding.py  02_contextual_embedding.md  02_contextual_embedding.py  03_attention.md  03_attention.py  04_block.md  04_block.py  05_generation.md  05_generation.py  11_overview.py  12_embedding.py  13_layer_norm.py  14_attention.py  15_mlp.py
my_gpt2/: __init__.py  generate.py  loader.py  model.py  spiece.py  tokenizer.py
my_gpt2_torch/: __init__.py  generate.py  loader.py  model.py
tests/: test_attention.py  test_block.py  test_gpt2.py  test_kv_cache.py  test_mha.py  test_mlp.py  test_model.py  test_spiece.py
