[project]
name = "my-gpt2"
version = "0.1.0"
description = "GPT-2 implementation from scratch using NumPy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "safetensors>=0.7.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_gpt2"]
