[project]
name = "my-gpt2"
version = "0.1.0"
description = "GPT-2 implementation from scratch using NumPy"
readme = "README.md"
repository = "https://github.com/7shi/my-gpt2"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "regex>=2024.0.0",
    "safetensors>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-gpt2 = "my_gpt2.generate:main"
model2vocab = "my_gpt2.spiece:main"

[tool.hatch.build.targets.wheel]
packages = ["my_gpt2"]
